# vehicle-dynamics-cpp-casadi

./: .gitignore  README.md
examples/01_circular_movement/: CMakeLists.txt  build-code.sh
examples/01_intro_car_class/: CMakeLists.txt  main.cpp
examples/02_circular_movement/: build-code.sh  main.cpp
marsvin/: CMakeLists.txt  marsvin.hpp
marsvin/state-space/car/include/: marsvin_car_linear.hpp  marsvin_car_linear_vx.hpp  marsvin_car_nonlinear.hpp  marsvin_car_nonlinear_vx.hpp
marsvin/state-space/car/src/: car_linear.cpp  car_linear_vx.cpp  car_nonlinear.cpp  car_nonlinear_vx.cpp
marsvin/tools/include/: marsvin_tools.hpp
marsvin/tools/src/: marsvin_tools.cpp
modelling/car-state-space/: CMakeLists.txt  build-code.sh
modelling/car-state-space/include/: car_linear.hpp  car_linear_vx.hpp  car_nonlinear.hpp  car_nonlinear_vx.hpp
modelling/car-state-space/src/: car_linear.cpp  car_linear_vx.cpp  car_nonlinear.cpp  car_nonlinear_vx.cpp  main.cpp
modelling/mt-tools/include/: mt_tools.hpp
modelling/mt-tools/src/: mt_tools.cpp
